plugins {
    alias(libs.plugins.android.application)
    id 'dagger.hilt.android.plugin'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}

android {
    namespace 'com.example.fitnesstracker'
    compileSdk 35

    defaultConfig {
        applicationId "com.example.fitnesstracker"
        minSdk 28
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    buildFeatures {
        viewBinding = true
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout

    implementation libs.hilt.android
    annotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"

    implementation libs.room.runtime
    annotationProcessor "androidx.room:room-compiler:$room_version"
    implementation libs.room.rxjava3

    implementation libs.retrofit
    implementation libs.converter.gson

    implementation libs.rxjava
    implementation libs.rxandroid

    implementation libs.okhttp
    implementation libs.logging.interceptor
    implementation libs.rxjava3.retrofit.adapter
    implementation libs.gson

    implementation libs.lifecycle.reactivestreams

    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}